div spacing changed to Grid spacing bug in role header fixed

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -36,12 +36,10 @@
 
 .top-header > div {
   display: flex;
-  flex-basis: 10%;
   justify-content: flex-end;
 }
 
 .top-header .top-header-text {
-  flex-basis: 80%;
 }
 
 .content {
